test/asm/line-continuation.err
error: Invalid character 's' after line continuation
    at line-continuation.asm(3)
warning: spam [-Wuser]
    at line-continuation.asm::spam(4) <- line-continuation.asm(6)
error: Label `foo` created outside of a `SECTION`
    at line-continuation.asm(14)
Assembly aborted with 2 errors!
